--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "connect-redis": "1.4.7",
     "winston": "0.7.3",
     "express-winston": "0.2.6",
-    "jade": "0.35.0"
+    "jade": "0.35.0",
+    "mongoose": "3.8.3"
   },
   "repository": {
     "type": "git"
