--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "winston": "0.7.3",
     "express-winston": "0.2.6",
     "jade": "0.35.0",
-    "mongoose": "3.8.3"
+    "mongoose": "3.8.3",
+    "redis": "0.10.1"
   },
   "repository": {
     "type": "git"
