--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "redis": "0.10.1"
   },
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "https://github.com/Philmod/wcbrazil.git"
   },
   "author": "philmod",
   "license": "Copyright (c) 2014 Philmod"
