--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-winston": "0.2.6",
     "jade": "0.35.0",
     "mongoose": "3.8.3",
-    "redis": "0.10.1"
+    "redis": "0.10.1",
+    "newrelic": "1.5.5"
   },
   "repository": {
     "type": "git",
