--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jade": "0.35.0",
     "mongoose": "3.8.3",
     "redis": "0.10.1",
-    "newrelic": "1.5.5"
+    "newrelic": "1.5.5",
+    "cli-color": "0.1.6"
   },
   "repository": {
     "type": "git",
