--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "newrelic": "1.5.5",
     "cli-color": "0.1.6",
     "moment": "2.6.0",
-    "moment-timezone": "0.0.6"
+    "moment-timezone": "0.0.6",
+    "node-minify": "0.10.3"
   },
   "repository": {
     "type": "git",
