--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "moment-timezone": "0.0.6",
     "node-minify": "0.10.3",
     "request": "2.36.0",
-    "cheerio": "0.17.0"
+    "cheerio": "0.17.0",
+    "twitter": "0.2.9",
+    "humanize": "0.0.9"
   },
   "repository": {
     "type": "git",
