--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-  "name": "wcbrazil",
-  "version": "0.0.1",
-  "description": "world cup brazil 2014",
-  "author": "Philmod <philippe.modard@gmail.com>",
+  "name": "france2016",
+  "version": "2.0.0",
+  "description": "euro cup france 2016",
+  "author": "philmod",
   "main": "index.js",
   "engines": {
     "node": "0.10.18",
     "npm": "1.3.11"
   },
   "dependencies": {
+    "async": "^1.5.2",
+    "cheerio": "^0.20.0",
+    "cli-color": "^1.1.0",
+    "connect-redis": "^3.0.2",
+    "express-winston": "^1.3.1",
     "express.io": "1.1.13",
-    "async": "0.8.0",
-    "underscore": "1.6.0",
-    "connect-redis": "1.4.7",
-    "winston": "0.7.3",
-    "express-winston": "0.2.6",
-    "jade": "0.35.0",
-    "mongoose": "3.8.3",
-    "redis": "0.10.1",
-    "newrelic": "1.5.5",
-    "cli-color": "0.1.6",
-    "moment": "2.6.0",
-    "moment-timezone": "0.0.6",
-    "node-minify": "0.10.3",
-    "request": "2.36.0",
-    "cheerio": "0.17.0",
-    "twitter": "0.2.9",
-    "humanize": "0.0.9"
+    "humanize": "0.0.9",
+    "jade": "^1.11.0",
+    "moment": "^2.13.0",
+    "moment-timezone": "^0.5.4",
+    "mongoose": "^4.4.19",
+    "newrelic": "^1.28.0",
+    "node-minify": "^1.3.7",
+    "redis": "^2.5.3",
+    "request": "^2.72.0",
+    "twitter": "^1.3.0",
+    "underscore": "^1.8.3",
+    "winston": "^2.2.0"
+  },
+  "scripts": {
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Philmod/wcbrazil.git"
   },
-  "author": "philmod",
   "license": "Copyright (c) 2014 Philmod"
 }
