--- a/package.json
+++ b/package.json
@@ -10,23 +10,26 @@
   },
   "dependencies": {
     "async": "^1.5.2",
+    "body-parser": "^1.15.1",
     "cheerio": "^0.20.0",
     "cli-color": "^1.1.0",
     "connect-redis": "^3.0.2",
-    "express-winston": "^1.3.1",
-    "express.io": "1.1.13",
+    "errorhandler": "^1.4.3",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "humanize": "0.0.9",
     "jade": "^1.11.0",
     "moment": "^2.13.0",
     "moment-timezone": "^0.5.4",
     "mongoose": "^4.4.19",
+    "morgan": "^1.7.0",
     "newrelic": "^1.28.0",
     "node-minify": "^1.3.7",
     "redis": "^2.5.3",
     "request": "^2.72.0",
+    "socket.io": "^1.4.6",
     "twitter": "^1.3.0",
-    "underscore": "^1.8.3",
-    "winston": "^2.2.0"
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "start": "node index.js"
