--- a/package.json
+++ b/package.json
@@ -32,9 +32,15 @@
     "twitter": "^1.3.0",
     "underscore": "^1.8.3"
   },
+  "devDependencies": {
+    "chai": "*",
+    "mocha": "^2.4.5",
+    "supertest": ""
+  },
   "scripts": {
     "start": "node index.js -s",
-    "dev": "node index.js -s -d '2014-06-14'",
+    "dev": "node index.js -s -d '2016-06-14'",
+    "test": "NODE_ENV=test mocha test",
     "clean": "rm *.tmp",
     "load-data": "node index.js -l"
   },
