--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "async": "^1.5.2",
     "body-parser": "^1.15.1",
-    "cheerio": "^0.20.0",
+    "cheerio": "^1.0.0-rc.2",
     "cli-color": "^1.1.0",
     "commander": "^2.9.0",
     "connect-redis": "^3.0.2",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "fake-useragent": "^1.0.1",
     "humanize": "0.0.9",
     "jade": "^1.11.0",
     "moment": "^2.13.0",
@@ -26,7 +27,7 @@
     "morgan": "^1.7.0",
     "node-minify": "^1.3.7",
     "redis": "^2.5.3",
-    "request": "^2.72.0",
+    "request": "^2.87.0",
     "socket.io": "^1.4.6",
     "twitter": "^1.3.0",
     "underscore": "^1.8.3"
