--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "russia2018",
   "version": "2.0.0",
-  "description": "world cup rissa 2018",
+  "description": "world cup russia 2018",
   "author": "philmod",
   "main": "index.js",
   "engines": {
