--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redis": "^2.5.3",
     "request": "^2.87.0",
     "socket.io": "^1.4.6",
+    "socket.io-client": "^2.1.1",
     "twitter": "^1.3.0",
     "underscore": "^1.8.3"
   },
