--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,5 +5,8 @@ steps:
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/russia2018:$REVISION_ID', '.']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/$PROJECT_ID/russia2018:$REVISION_ID']
-
-# TODO(philmod): deploy to kubernetes
+- name: 'gcr.io/cloud-builders/kubectl'
+  args: ['set', 'image', 'deployment/russia2018', 'russia2018=gcr.io/$PROJECT_ID/russia2018:$REVISION_ID']
+  env:
+  - 'CLOUDSDK_COMPUTE_ZONE=us-east1-b'
+  - 'CLOUDSDK_CONTAINER_CLUSTER=node-example-cluster'
