--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,17 @@
 steps:
-- name: 'gcr.io/cloud-builders/npm'
-  args: ['install']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/russia2018:$REVISION_ID', '.']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/russia2018:$REVISION_ID']
+# - name: 'gcr.io/cloud-builders/npm'
+#   args: ['install']
+# - name: 'gcr.io/cloud-builders/docker'
+#   args: ['build', '-t', 'gcr.io/$PROJECT_ID/russia2018:$REVISION_ID', '.']
+# - name: 'gcr.io/cloud-builders/docker'
+#   args: ['push', 'gcr.io/$PROJECT_ID/russia2018:$REVISION_ID']
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: ['set', 'image', 'deployment/russia2018', 'russia2018=gcr.io/$PROJECT_ID/russia2018:$REVISION_ID']
+  entrypoint: 'bash'
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-east1-b'
   - 'CLOUDSDK_CONTAINER_CLUSTER=node-example-cluster'
+  args:
+  - '-c'
+  - |
+    echo $$BRANCH_NAME
+    # kubectl set image deployment/russia2018 russia2018=gcr.io/$PROJECT_ID/russia2018:$REVISION_ID
