--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,5 +13,5 @@ steps:
   args:
   - '-c'
   - |
-    echo $$BRANCH_NAME
+    echo hello $$BRANCH_NAME
     # kubectl set image deployment/russia2018 russia2018=gcr.io/$PROJECT_ID/russia2018:$REVISION_ID
