--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,5 +13,8 @@ steps:
   args:
   - '-c'
   - |
-    echo hello $PROJECT_ID $REVISION_ID $TAG_NAME $REPO_NAME $BRANCH_NAME
+    if [ "$BRANCH_NAME" != "master" ]; then
+      echo "not master branch, exiting without deploying to gke"
+      exit 0
+    fi
     # kubectl set image deployment/russia2018 russia2018=gcr.io/$PROJECT_ID/russia2018:$REVISION_ID
