--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,15 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/$PROJECT_ID/russia2018:$REVISION_ID']
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: ['set', 'image', 'deployment/russia2018', 'russia2018=gcr.io/$PROJECT_ID/russia2018:$REVISION_ID']
+  entrypoint: 'bash'
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-east1-b'
   - 'CLOUDSDK_CONTAINER_CLUSTER=node-example-cluster'
+  args:
+  - '-c'
+  - |
+    if [ "$BRANCH_NAME" != "master" ]; then
+      echo "Not master branch, exiting without deploying to gke"
+      exit 0
+    fi
+    kubectl set image deployment/russia2018 russia2018=gcr.io/$PROJECT_ID/russia2018:$REVISION_ID
