--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "npm": "3.9.4"
   },
   "dependencies": {
+    "angular": "^1.4.14",
+    "angular-chart.js": "^1.1.1",
     "async": "^1.5.2",
     "body-parser": "^1.15.1",
+    "chart.js": "^2.7.2",
     "cheerio": "^1.0.0-rc.2",
     "cli-color": "^1.1.0",
     "commander": "^2.9.0",
